[gd_scene load_steps=53 format=3]

[ext_resource type="Script" path="res://Script/Main_menu/GameSet.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b1iyk4m7ycqle" path="res://Art/Level/Settlement/623.png" id="2"]
[ext_resource type="FontFile" uid="uid://0bcwbxanna5n" path="res://Font/Aa文徵明琴赋小楷_mianfeiziti.com.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://t8l066v8xryp" path="res://Art/game_pic/679.PNG" id="4"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="5"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxLine" id="6"]
color = Color(1, 1, 1, 1)
grow_begin = 0.0
grow_end = -8.0
thickness = 6
script = null

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(1, 0.0392157, 0.0235294, 1)
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[sub_resource type="StyleBoxEmpty" id="26"]
script = null

[sub_resource type="StyleBoxEmpty" id="27"]
script = null

[sub_resource type="StyleBoxEmpty" id="28"]
script = null

[sub_resource type="StyleBoxEmpty" id="29"]
script = null

[sub_resource type="StyleBoxEmpty" id="30"]
script = null

[sub_resource type="StyleBoxEmpty" id="31"]
script = null

[sub_resource type="StyleBoxEmpty" id="32"]
script = null

[sub_resource type="StyleBoxEmpty" id="33"]
script = null

[sub_resource type="StyleBoxEmpty" id="34"]
script = null

[sub_resource type="StyleBoxEmpty" id="35"]
script = null

[sub_resource type="StyleBoxEmpty" id="36"]
script = null

[sub_resource type="StyleBoxEmpty" id="37"]
script = null

[sub_resource type="StyleBoxEmpty" id="38"]
script = null

[sub_resource type="StyleBoxEmpty" id="39"]
script = null

[sub_resource type="StyleBoxEmpty" id="40"]
script = null

[sub_resource type="StyleBoxEmpty" id="41"]
script = null

[sub_resource type="StyleBoxEmpty" id="42"]
script = null

[sub_resource type="StyleBoxEmpty" id="43"]
script = null

[sub_resource type="StyleBoxEmpty" id="44"]
script = null

[sub_resource type="StyleBoxEmpty" id="45"]
script = null

[sub_resource type="StyleBoxEmpty" id="46"]
script = null

[sub_resource type="StyleBoxEmpty" id="47"]
script = null

[node name="GameSet" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 942.0
offset_bottom = 589.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(471, 296)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="BGColor" type="ColorRect" parent="Bg"]
offset_left = -415.0
offset_top = -252.0
offset_right = 424.0
offset_bottom = 266.0
color = Color(0, 0, 0, 0.541176)
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="Bg/BGColor"]
layout_mode = 0
offset_left = 364.0
offset_top = 11.0
offset_right = 504.0
offset_bottom = 60.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 35
text = "游戏设置"

[node name="fgx_1" type="Sprite2D" parent="Bg/BGColor"]
position = Vector2(300, 35)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="fgx_2" type="Sprite2D" parent="Bg/BGColor"]
position = Vector2(580, 35)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Bg/BGColor"]
layout_mode = 0
offset_left = 43.0
offset_top = 67.0
offset_right = 333.0
offset_bottom = 508.0
theme_override_constants/separation = 7

[node name="GameMusicTitle" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "游戏音乐："
vertical_alignment = 1

[node name="GMOpenOrClose" type="Button" parent="Bg/BGColor/VBoxContainer/GameMusicTitle"]
layout_mode = 0
offset_left = 120.0
offset_top = 1.0
offset_right = 195.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "关闭中"
metadata/_edit_lock_ = true

[node name="GameMusicTitle2" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "游戏音效："
vertical_alignment = 1

[node name="GM2OpenOrClose" type="Button" parent="Bg/BGColor/VBoxContainer/GameMusicTitle2"]
layout_mode = 0
offset_left = 120.0
offset_top = 1.0
offset_right = 195.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "关闭中"
metadata/_edit_lock_ = true

[node name="GameMusicFB" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "音乐音量："
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Bg/BGColor/VBoxContainer/GameMusicFB"]
layout_mode = 0
offset_left = 122.0
offset_top = 14.0
offset_right = 250.0
offset_bottom = 30.0
mouse_default_cursor_shape = 2
theme_override_styles/slider = SubResource( "6" )
theme_override_styles/grabber_area_highlight = SubResource( "7" )
min_value = -80.0
max_value = 5.0
metadata/_edit_lock_ = true

[node name="GameMusicFB2" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "音效音量："
vertical_alignment = 1

[node name="GM2Slider" type="HSlider" parent="Bg/BGColor/VBoxContainer/GameMusicFB2"]
layout_mode = 0
offset_left = 122.0
offset_top = 14.0
offset_right = 250.0
offset_bottom = 30.0
mouse_default_cursor_shape = 2
theme_override_styles/slider = SubResource( "6" )
theme_override_styles/grabber_area_highlight = SubResource( "7" )
min_value = -80.0
max_value = 5.0
metadata/_edit_lock_ = true

[node name="MonsterBloodText" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "怪物具体血量显示："
vertical_alignment = 1

[node name="MBTOpenOrClose" type="Button" parent="Bg/BGColor/VBoxContainer/MonsterBloodText"]
layout_mode = 0
offset_left = 224.0
offset_top = 1.0
offset_right = 299.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "关闭中"
metadata/_edit_lock_ = true

[node name="MonsterBloodShow" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "怪物上方血条显示："
vertical_alignment = 1

[node name="MBSOpenOrClose" type="Button" parent="Bg/BGColor/VBoxContainer/MonsterBloodShow"]
layout_mode = 0
offset_left = 221.0
offset_top = 1.0
offset_right = 296.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "开启中"
metadata/_edit_lock_ = true

[node name="MonsterBloodShow2" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "怪物头顶血条显示："
vertical_alignment = 1

[node name="MBS2OpenOrClose" type="Button" parent="Bg/BGColor/VBoxContainer/MonsterBloodShow2"]
layout_mode = 0
offset_left = 221.0
offset_top = 1.0
offset_right = 296.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "关闭中"
metadata/_edit_lock_ = true

[node name="RoleEQ" type="Label" parent="Bg/BGColor/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 19
text = "角色武器："

[node name="ShowClose2" type="Button" parent="Bg/BGColor/VBoxContainer/RoleEQ"]
layout_mode = 0
offset_left = 94.0
offset_top = -2.0
offset_right = 157.0
offset_bottom = 29.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource( "8" )
theme_override_styles/hover = SubResource( "9" )
theme_override_styles/pressed = SubResource( "10" )
theme_override_styles/disabled = SubResource( "11" )
theme_override_styles/focus = SubResource( "12" )
text = "显示中"
metadata/_edit_lock_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Bg/BGColor"]
layout_mode = 0
offset_left = 449.0
offset_top = 67.0
offset_right = 739.0
offset_bottom = 479.0
theme_override_constants/separation = 13

[node name="GameMusicTitle" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "主题音乐："
vertical_alignment = 1

[node name="GMzm_1" type="Button" parent="Bg/BGColor/VBoxContainer2/GameMusicTitle"]
layout_mode = 0
offset_left = 114.0
offset_top = 1.0
offset_right = 178.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "版本1"
metadata/_edit_lock_ = true

[node name="GMzm_2" type="Button" parent="Bg/BGColor/VBoxContainer2/GameMusicTitle"]
layout_mode = 0
offset_left = 185.0
offset_top = 1.0
offset_right = 249.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "版本2"
metadata/_edit_lock_ = true

[node name="GMzm_3" type="Button" parent="Bg/BGColor/VBoxContainer2/GameMusicTitle"]
layout_mode = 0
offset_left = 255.0
offset_top = 1.0
offset_right = 319.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "版本3"
metadata/_edit_lock_ = true

[node name="GMzm_4" type="Button" parent="Bg/BGColor/VBoxContainer2/GameMusicTitle"]
layout_mode = 0
offset_left = 321.0
offset_top = 1.0
offset_right = 385.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "13" )
theme_override_styles/hover = SubResource( "14" )
theme_override_styles/pressed = SubResource( "15" )
theme_override_styles/disabled = SubResource( "16" )
theme_override_styles/focus = SubResource( "17" )
text = "版本4"
metadata/_edit_lock_ = true

[node name="GameMusicTitle2" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "主题背景："
vertical_alignment = 1

[node name="GM2zm_1" type="Button" parent="Bg/BGColor/VBoxContainer2/GameMusicTitle2"]
layout_mode = 0
offset_left = 118.0
offset_top = 1.0
offset_right = 182.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "版本1"
metadata/_edit_lock_ = true

[node name="GM2zm_2" type="Button" parent="Bg/BGColor/VBoxContainer2/GameMusicTitle2"]
layout_mode = 0
offset_left = 189.0
offset_top = 1.0
offset_right = 253.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "版本2"
metadata/_edit_lock_ = true

[node name="GM2zm_3" type="Button" parent="Bg/BGColor/VBoxContainer2/GameMusicTitle2"]
layout_mode = 0
offset_left = 259.0
offset_top = 1.0
offset_right = 323.0
offset_bottom = 37.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "版本3"
metadata/_edit_lock_ = true

[node name="BodyShow" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
text = "是否显示怪物身体（此项对部分怪物无效）"

[node name="YesOrNo" type="Button" parent="Bg/BGColor/VBoxContainer2/BodyShow"]
layout_mode = 0
offset_left = 304.0
offset_top = -2.0
offset_right = 348.0
offset_bottom = 27.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource( "18" )
theme_override_styles/hover = SubResource( "19" )
theme_override_styles/pressed = SubResource( "20" )
theme_override_styles/disabled = SubResource( "21" )
theme_override_styles/focus = SubResource( "22" )
text = "显示"

[node name="HpBloodDelay" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 23
text = "血条缓动机制："

[node name="YesORNot" type="Button" parent="Bg/BGColor/VBoxContainer2/HpBloodDelay"]
layout_mode = 0
offset_left = 155.0
offset_top = -1.0
offset_right = 230.0
offset_bottom = 34.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "23" )
theme_override_styles/hover = SubResource( "24" )
theme_override_styles/pressed = SubResource( "25" )
theme_override_styles/disabled = SubResource( "26" )
theme_override_styles/focus = SubResource( "27" )
text = "开启中"

[node name="AutomaticallyPickUpItems" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 20
text = "自动捡拾掉落物："

[node name="YesOrNots" type="Button" parent="Bg/BGColor/VBoxContainer2/AutomaticallyPickUpItems"]
layout_mode = 0
offset_left = 158.0
offset_right = 218.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource( "28" )
theme_override_styles/hover = SubResource( "29" )
theme_override_styles/pressed = SubResource( "30" )
theme_override_styles/disabled = SubResource( "31" )
theme_override_styles/focus = SubResource( "32" )
text = "开启中"

[node name="AutomaticallyPickUpItems2" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 21
text = "捡拾物品音效："

[node name="Ornot" type="Button" parent="Bg/BGColor/VBoxContainer2/AutomaticallyPickUpItems2"]
layout_mode = 0
offset_left = 145.0
offset_top = -1.0
offset_right = 205.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource( "33" )
theme_override_styles/hover = SubResource( "34" )
theme_override_styles/pressed = SubResource( "35" )
theme_override_styles/disabled = SubResource( "36" )
theme_override_styles/focus = SubResource( "37" )
text = "开启中"

[node name="LevelInfo" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 20
text = "进入关卡前弹出关卡信息框："

[node name="openClose" type="Button" parent="Bg/BGColor/VBoxContainer2/LevelInfo"]
layout_mode = 0
offset_left = 253.0
offset_top = -1.0
offset_right = 309.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource( "38" )
theme_override_styles/hover = SubResource( "39" )
theme_override_styles/pressed = SubResource( "40" )
theme_override_styles/disabled = SubResource( "41" )
theme_override_styles/focus = SubResource( "42" )
text = "开启中"

[node name="RoleBody" type="Label" parent="Bg/BGColor/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 19
text = "角色身体："

[node name="ShowClose" type="Button" parent="Bg/BGColor/VBoxContainer2/RoleBody"]
layout_mode = 0
offset_left = 94.0
offset_top = -2.0
offset_right = 157.0
offset_bottom = 29.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource( "8" )
theme_override_styles/hover = SubResource( "9" )
theme_override_styles/pressed = SubResource( "10" )
theme_override_styles/disabled = SubResource( "11" )
theme_override_styles/focus = SubResource( "12" )
text = "显示中"
metadata/_edit_lock_ = true

[node name="Return" type="Button" parent="Bg"]
offset_left = 352.0
offset_top = -290.0
offset_right = 456.0
offset_bottom = -259.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource( "43" )
theme_override_styles/hover = SubResource( "44" )
theme_override_styles/pressed = SubResource( "45" )
theme_override_styles/disabled = SubResource( "46" )
theme_override_styles/focus = SubResource( "47" )
text = "返回"
metadata/_edit_lock_ = true

[connection signal="pressed" from="Bg/BGColor/VBoxContainer/GameMusicTitle/GMOpenOrClose" to="." method="_on_gm_open_or_close_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer/GameMusicTitle2/GM2OpenOrClose" to="." method="_on_gm_2_open_or_close_pressed" flags=18]
[connection signal="value_changed" from="Bg/BGColor/VBoxContainer/GameMusicFB/HSlider" to="." method="_on_h_slider_value_changed" flags=18]
[connection signal="value_changed" from="Bg/BGColor/VBoxContainer/GameMusicFB2/GM2Slider" to="." method="_on_gm_2_slider_value_changed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer/MonsterBloodText/MBTOpenOrClose" to="." method="_on_mbt_open_or_close_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer/MonsterBloodShow/MBSOpenOrClose" to="." method="_on_mbs_open_or_close_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer/MonsterBloodShow2/MBS2OpenOrClose" to="." method="_on_mbs_2_open_or_close_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer/RoleEQ/ShowClose2" to="." method="_on_show_close_2_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/GameMusicTitle/GMzm_1" to="." method="_on_g_mzm_1_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/GameMusicTitle/GMzm_2" to="." method="_on_g_mzm_2_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/GameMusicTitle/GMzm_3" to="." method="_on_g_mzm_3_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/GameMusicTitle/GMzm_4" to="." method="_on_g_mzm_4_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/GameMusicTitle2/GM2zm_1" to="." method="_on_gm_2_zm_1_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/GameMusicTitle2/GM2zm_2" to="." method="_on_gm_2_zm_2_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/GameMusicTitle2/GM2zm_3" to="." method="_on_gm_2_zm_3_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/BodyShow/YesOrNo" to="." method="_on_yes_or_no_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/HpBloodDelay/YesORNot" to="." method="_on_yes_or_not_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/AutomaticallyPickUpItems/YesOrNots" to="." method="_on_yes_or_nots_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/AutomaticallyPickUpItems2/Ornot" to="." method="_on_ornot_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/LevelInfo/openClose" to="." method="_on_open_close_pressed" flags=18]
[connection signal="pressed" from="Bg/BGColor/VBoxContainer2/RoleBody/ShowClose" to="." method="_on_show_close_pressed" flags=18]
[connection signal="pressed" from="Bg/Return" to="." method="_on_return_pressed" flags=18]
